# carolcc

./: .gitignore  CMakeLists.txt  README.md  run_obj.sh  run_one.sh  run_test.sh  run_with_lib.sh  test.ll  test.s
scripts/: analyzer.py  file_diff.py  pretty_print.py  run_one.sh  runner.py  show_dot.sh  test_std.py  tester.py  trival_presenter.py  trivial-autotest-ayame.py  turn_dot_to_png.sh
src/: main.cpp  syntax_tree.cpp  syntax_tree.h  utils.h
src/asm/: asm_builder.cpp  asm_builder.h  asm_instr.cpp  asm_instr.h  linear_scan_reg_alloc.cpp
src/frontend/: parser.cpp  parser.h  parser.yy  token.cpp  token.l
src/helpers/: graph_helper.cpp  type_helper.h
src/ir/: BaseBlock.cpp  BaseBlock.h  Instruction.cpp  Instruction.h  base_block.cpp  base_block.h  baseblock.cpp  baseblock.h  basic_block.cpp  basic_block.h  basicblock.cpp  basicblock.h  constant.cpp  constant.h  function.cpp  function.h  global_variable.cpp  global_variable.h  globalvariable.h  instruction.cpp  instruction.h  module.h  type.cpp  type.h  user.cpp  user.h  value.cpp  value.h
src/passes/: EmitHir.cpp  EmitHir.h  constan_fold.cpp  constan_fold.h  dead_code_elimination.cpp  dead_code_elimination.h  dominators.cpp  dominators.h  emit_ir.cpp  emit_ir.h  function_inline.cpp  function_inline.h  global_value_numbering.cpp  global_value_numbering.h  hir_simplify_cfg.cpp  hir_simplify_cfg.h  hir_to_mir.cpp  hir_to_mir.h  instruction_combine.cpp  instruction_combine.h  lazy_code_motion.cpp  lazy_code_motion.h  loop_invariant.cpp  loop_invariant.h  loop_invariant_exp.cpp  loop_invariant_exp.h  lower_ir.cpp  lower_ir.h  lowerir.cpp  lowerir.h  mem2reg.cpp  mem2reg.h  mir_simplify_cfg.cpp  mir_simplify_cfg.h  module.cpp  module.h  naming_value.cpp  naming_value.h  pass.h  pass_manager.cpp  (+7 more)
src/passes/analysis/: alias_analysis.cpp  alias_analysis.h  cfg_analysis.cpp  cfg_analysis.h  dominators.cpp  dominators.h  inter_procedural_analysis.cpp  inter_procedural_analysis.h  loop_analysis.cpp  loop_analysis.h
src/visitor/: hir_shower.cpp  hir_shower.h  ir_builder.cpp  ir_builder.h  ir_to_c.cpp  ir_to_c.h  ir_visitor_base.cpp  ir_visitor_base.h  llvm_ir_index.cpp  llvm_ir_index.h  llvm_ir_printer.cpp  llvm_ir_printer.h  syntax_detail_shower.cpp  syntax_detail_shower.h  syntax_tree_builder.cpp  syntax_tree_builder.h  syntax_tree_shower.cpp  syntax_tree_shower.h  sysy_builder.cpp  sysy_builder.h  tree_visitor_base.cpp  tree_visitor_base.h  visitor_base.h
